# sP

./: CMakeLists.txt  README.md
Extended-Exercise-1/: CMakeLists.txt  NumberSeries.cpp  NumberSeries.h  NumberSeriesWrapper.cpp  NumberSeriesWrapper.h  listing.aux  listing.tex  main.cpp
Extended-Exercise-2/: CMakeLists.txt  calculator.hpp  listing.aux  listing.tex  test_calculator.cpp
Session-1/: CMakeLists.txt  main.cpp
Session-2/: Benchmarking.cpp  Benchmarking.h  CMakeLists.txt  main.cpp
Session-3/: CMakeLists.txt  main.cpp
Session-4/: CMakeLists.txt  main.cpp
Session-5/: CMakeLists.txt  main.cpp
Session-7/: CMakeLists.txt  main.cpp
Session-8/: CMakeLists.txt
calculator/: CMakeLists.txt  Expression.cpp  Expression.h  calculator.hpp  test_calculator.cpp
polygon/: polygon.cpp  polygon.hpp  test_polygon.cpp
